--- a/wiki/TestData.wiki
+++ b/wiki/TestData.wiki
@@ -10,3 +10,6 @@ The data downloaded from the NCBI SRA is in the base format. We translated the d
 color signals in CSFASTA format. Because The data set is too large for many people to download, we provided the used proportion of data in our download section.   
   * Real SOLiD reads from B anthracis can be downloaded from SOCS's page [http://socs.biology.gatech.edu/Download.html SOCS]. 
   * Simulated SOLiD or Solexa reads can be generated using the small program in the download section. 
+
+Here we show some mapping results of the brain transcriptom. 
+[http://dw408k-1.cmb.usc.edu:8080/GeneList.htm brain RNA seq data]
