Edited wiki page through web user interface.

--- a/wiki/TestData.wiki
+++ b/wiki/TestData.wiki
@@ -11,5 +11,5 @@ color signals in CSFASTA format. Because The data set is too large for many peop
   * Real SOLiD reads from B anthracis can be downloaded from SOCS's page [http://socs.biology.gatech.edu/Download.html SOCS]. 
   * Simulated SOLiD or Solexa reads can be generated using the small program in the download section. 
 
-Here we show some mapping results of the brain transcriptom. 
+Here I show some mapping results of the brain transcriptom. 
 [http://dw408k-1.cmb.usc.edu:8080/GeneList.htm brain RNA seq data]
