--- a/wiki/TestData.wiki
+++ b/wiki/TestData.wiki
@@ -1,6 +1,6 @@
 #labels Featured
 This page lists the data set used in the paper. PerM has been tested for many other public and private data sets. For more public data sets, check [http://www.ncbi.nlm.nih.gov/Traces/sra/sra.cgi? Short read archieve], [http://solidsoftwaretools.com/gf/project/ecoli2x50/ Applied Biosystem] or [ftp://ftp.illumina.com Illumina]. In addition, here I show some mapping results of the brain   
-[http://dw408k-1.cmb.usc.edu:8080/GeneList.htm brain RNA seq] result.
+[http://dw408k-1.cmb.usc.edu:8080/GeneList.htm brain RNA seq] result, using hg18 as the reference (change the reference, because the default ref or UCSC genome browser is hg19 now.
 
 === Reference ===
   * The anthracis.fasta file can be download from SOCS's webpage: [http://socs.biology.gatech.edu/Download.html SOCS ] 
