--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -6,7 +6,7 @@ If you have any usage question, please email "yanghoch at usc.edu".
 === [http://code.google.com/p/perm/wiki/Input Input Files]===
 === [http://code.google.com/p/perm/wiki/Output Output Files]===
 === [http://code.google.com/p/perm/wiki/Limitation Limitation and Future work] ===
-=== [http://code.google.com/p/perm/wiki/Algorithm Algorithm ] ===
+=== [http://code.google.com/p/perm/wiki/Algorithms Algorithms ] ===
 === [http://code.google.com/p/perm/wiki/QAin2008USC_MCB_Retreat Q & A ] ===
 == SYNOPSIS ==  
 To use the command line, type PerM with the args in the order.
