--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -14,10 +14,10 @@ To use the command line, type PerM with the args in the order.
 For single end read: {{{PerM <Ref> <Reads> [options]}}}
 
 For example:
- * {{{./PerM Ref.fasta Reads.fasta -v 5 }}}
+ * {{{./PerM Ref.fasta Reads.fasta -v 5 -o out.mapping}}}
  * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt -v 5 -u unmappedReads.fa -E }}}
  * {{{./PerM Ref.fasta Reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3}}}
- * {{{./PerM my.index SingleEndReads.csfasta -v 5}}} 
+ * {{{./PerM my.index SingleEndReads.csfasta -v 5 -o out.sam}}} 
 For paired end read: {{{ PerM <Ref> -1 <F3_Reads> -2 <R3_Reads> [options] }}}
 
 For example:
