Edited wiki page through web user interface.

--- a/wiki/Input.wiki
+++ b/wiki/Input.wiki
@@ -13,10 +13,11 @@ For example, in reads.fa:
 >gene1 
 ACGTACGTACGTACGTACGTACGTACGTACGT
 >gene2 
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 ...
 >geneN
-ACGTACGTACGTACGTACGTACGTACGTACGT
+GGGGAAAATTTAGCGGGGGAAAATTTAGCGGGGGA
+AAATTTAGCG...
 }}}
 "geneN" will be the Id for the reference sequence and be printed in the mapping result. 
 ==== Non-ACGT characters ====
