Edited wiki page through web user interface.

--- a/wiki/Input.wiki
+++ b/wiki/Input.wiki
@@ -1,13 +1,7 @@
 PerM takes (1) Reference and (2)Reads as the input files.
 ==Reference Files==
-PerM takes single or multiple fasta files as the reference. The file should have a corresponding ext name, such as '.fasta, .fa, .fna'. If there are multiple fasta files, make a list file with ext name '.txt', ex: {{{HumanGenome.txt}}}, with each fasta file path in a row. For example: 
-{{{
-/data/chr1.fa
-/data/chr2.fa
-...
-/data/chrY.fa
-}}}
-PerM also takes fasta with multiple sequences separated by a line start with "> Sequence Name", which is typically gene transcripts or contigs. The first word after ">" will be used as a "Sequence Name", which will be showed in the alignments result output. 
+PerM takes single or multiple fasta files as the reference. The file should have a corresponding ext name, such as '.fasta, .fa, .fna or .mfa'. 
+PerM takes fasta with multiple sequences separated by a line start with "> Sequence Name", which is typically gene transcripts or contigs. The first word after ">" will be used as a "Sequence Name", which will be showed in the alignments result output. 
 For example, in reads.fa: 
 {{{
 >gene1 
@@ -20,6 +14,14 @@ GGGGAAAATTTAGCGGGGGAAAATTTAGCGGGGGA
 AAATTTAGCG...
 }}}
 "geneN" will be the Id for the reference sequence and be printed in the mapping result. 
+If there are multiple fasta files, make a list file with ext name '.txt', ex: {{{HumanGenome.txt}}}, with each fasta file path in a row. For example: 
+{{{
+/data/chr1.fa
+/data/chr2.fa
+...
+/data/chrY.fa
+}}}
+Each file, ex /data/chr1.fa can have one or multiple sequences.
 ==== Non-ACGT characters ====
 Inside our program, sequences are concatenated and separated by "N", so no junction will be aligned. Only ACGT and N are allowed in the reference file. Other valid nucleotide symbol such as U, R, Y, M, K, S, W, B, D, H, V will be modified to "N". 
 
