--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -13,14 +13,14 @@ To use the command line, type PerM with the args in the order.
 
 For single end read: {{{PerM <Ref> <Reads> [options]}}}
 
-For example:
- * {{{./PerM Ref.fasta Reads.fasta -v 5 -o out.mapping}}} [http://code.google.com/p/perm/wiki/single_end_example1 (more)]
- * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt -v 5 -u unmappedReads.fa -E }}} [http://code.google.com/p/perm/wiki/single_end_example2 (more)]
- * {{{./PerM Ref.fasta Reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3}}} [http://code.google.com/p/perm/wiki/single_end_example3 (more)]
- * {{{./PerM my.index SingleEndReads.csfasta -v 5 -o out.sam}}} [http://code.google.com/p/perm/wiki/single_end_example4 (more)]
+[http://code.google.com/p/perm/wiki/single_end_example For example]:
+ * {{{./PerM Ref.fasta Reads.fasta -v 5 -o out.mapping}}} 
+ * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt -v 5 -u unmappedReads.fa -E }}} 
+ * {{{./PerM Ref.fasta Reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3}}} 
+ * {{{./PerM my.index SingleEndReads.csfasta -v 5 -o out.sam}}} 
 
 For paired end read: {{{ PerM <Ref> -1 <F3_Reads> -2 <R3_Reads> [options] }}}
-For example:
+[http://code.google.com/p/perm/wiki/paired_end_example For example]:
  * {{{./PerM ref.fa -1 F3.fa -2 R3.fa -U 3000 -L 100 -v 5 -A -m -s -o out.sam}}}
  * {{{./PerM ref.txt -1 F3.fq -2 R3.fq -v 5 -m -s my.index -o out.mapping --seed F3}}}
  * {{{./PerM my.index -1 F3.fq -2 R3.fq -U 3000 -L 100 -v 5 -A -o out.sam}}}
