--- a/wiki/single_end_example.wiki
+++ b/wiki/single_end_example.wiki
@@ -1,10 +1,13 @@
 ====./PerM Ref.fasta Reads.fasta -v 5 -o out.mapping ====
-In this example, PerM maps reads.fa to Ref.fasta, allowing five mismatches and output in 
-[http://code.google.com/p/perm/wiki/Output .mapping] format. It will check if the index has been saved in the default path. If yes, use the index; if no, build the index, but won't save it in the default path. The seed is chosen by PerM, according to the read length.
+With the above command line, PerM maps reads.fa to Ref.fasta, allowing five mismatches and output to out.mapping in the [http://code.google.com/p/perm/wiki/Output .mapping] format. It will check if the index has been saved in the default path. If yes, use the index; if no, build the index, but won't save it in the default path. The seed is chosen by PerM, according to the read length.
 
- * {{{./PerM RefFilesList.txt ReadsSetFilesList.txt -v 5 -u unmappedReads.fa -E }}} 
+====./PerM RefFilesList.txt ReadsSetFilesList.txt -v 5 -E -u unmappedReads.fa ====
+The {{{RefFilesList.txt}}} should be file listing each reference fasta file in a line.
+The {{{ReadsSetFilesList.txt}}} should be file listing each reads set in a line. 
+[http://code.google.com/p/perm/wiki/Input more description. With {{{-E}} PerM will exclude the ambiguous mapping and output only the unique mapping, in term of number of mismatches. 
+It allows five mismatches and output the unmapped reads to file {{{unmappedReads.fa}}}
 
- * {{{./PerM Ref.fasta Reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3}}} 
- * {{{./PerM my.index SingleEndReads.csfasta -v 5 -o out.sam}}} 
+====./PerM Ref.fasta Reads.csfasta -v 5 -m -s my.index --delimiter ',' --seed F3 ====
+====./PerM my.index SingleEndReads.csfasta -v 5 -o out.sam ====
 
 [http://code.google.com/p/perm/wiki/Manual Back to manual]
