--- a/wiki/single_end_example.wiki
+++ b/wiki/single_end_example.wiki
@@ -12,6 +12,6 @@ PerM guesses the read format as _SOLiD_ read format, according to the file's ext
 One can also use flag [http://code.google.com/p/perm/wiki/Manual --readFormat] to specify the format too. With {{{-m -s my.index}}}, PerM builds and saves index the the file {{{my.index}}}. It uses comma as the delimiter to extract the read Id in the "header line" in the csfasta file. With {{{--seed F4}}}, PerM use the seed which is full sensitive to four mismatches to build index, which could be significantly slower than {{{F3 or S,,11,,}}} seed. 
 
 ====./PerM my.index reads.csfasta -v 5 -o out.sam ====
-PerM reads in the saved index {{{my.index}}} and do the mapping. It output in [http://samtools.sourceforge.net/ SAM]" format, according to the ext name. 
+PerM reads in the saved index {{{my.index}}} and do the mapping. It output in [http://samtools.sourceforge.net/ SAM] format, according to the ext name. 
 
 [http://code.google.com/p/perm/wiki/Manual Back to manual]
