--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -70,12 +70,7 @@ PerM deals with mate-paired reads by mapping each end separately. All combinatio
 
 The upper bound and lower bound can be negative, which may catch the re-arrangement variations. User should use argument {{{ -A }}} to avoid missing the correct pairs. However, this may let the running time become very slow, if both ends are in the repetitive regions. 
 
-{{{Ex:  ./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -e -A -v 5 -m -s -o out.sam.}}}
-  * All Paired mapping with separation outside the 200bp to 500bp range won't be output.
-  * All mapped-paired with multiple qualified mapped pairs won't be output for {{{ -e }}}
-  * For each end, try all mapping locations within 5 mismatches. 
-  * PerM will reconstruct and save the index to the default path for future mappings.
-  * PerM will output the mappings file to out.sam in the sam format.
+[ example]
 
 ==== Default setting ====  
 The following is the default setting when the corresponding arg are not specified. Please specify the arg to change the default settings.
