--- a/wiki/paired_end_example.wiki
+++ b/wiki/paired_end_example.wiki
@@ -1,13 +1,7 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+#Paired-end read command line example
+{{{Ex:  ./PerM -1 F3.fq -2 R3.fq -U 500 -L 200 -e -A -v 5 -m -s -o out.sam.}}}
+  * All Paired mapping with separation outside the 200bp to 500bp range won't be output.
+  * All mapped-paired with multiple qualified mapped pairs won't be output for {{{ -e }}}
+  * For each end, try all mapping locations within 5 mismatches. 
+  * PerM will reconstruct and save the index to the default path for future mappings.
+  * PerM will output the mappings file to out.sam in the sam format.
