Edited wiki page through web user interface.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -55,11 +55,7 @@ For example:
 || *--readFormat*||_{fasta | fastq | csfasta | csfastq}_||Read in reads in the specified format, instead of gussing according to the ext name. ||
 || *--delimiter*||_char_|| _char_ is a character used as the delimiter to separate the the read id, and the additional info in the line with '>' in fasta or csfasta. ||
 
-{{{ Ex:  ./PerM Ref.fa Reads.fa -v 5 -E -T 36 -m -s -o out.sam }}}
-
- * PerM will report only the uniquely mapped reads within 5 mismatches in the first 36 bases.
- * PerM will reconstruct and save the indexes to the default path for future mappings.
- * PerM will output the mappings file to out.sam in the sam format.
+[http://code.google.com/p/perm/wiki/single_end_example examples]
 
 ==== Options for Paired-end Reads ==== 
 PerM deals with mate-paired reads by mapping each end separately. All combination of mated paired mapping in the same ref will be printed, if their separation are in the expected ranged, specified by the upper bound and the lower bound. 
@@ -70,7 +66,7 @@ PerM deals with mate-paired reads by mapping each end separately. All combinatio
 
 The upper bound and lower bound can be negative, which may catch the re-arrangement variations. User should use argument {{{ -A }}} to avoid missing the correct pairs. However, this may let the running time become very slow, if both ends are in the repetitive regions. 
 
-[ example]
+[http://code.google.com/p/perm/wiki/paired_end_example example]
 
 ==== Default setting ====  
 The following is the default setting when the corresponding arg are not specified. Please specify the arg to change the default settings.
