--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -21,7 +21,7 @@ For [http://code.google.com/p/perm/wiki/single_end_example example]:
 
 For paired end read: {{{ PerM <Ref> -1 <F3_Reads> -2 <R3_Reads> [options] }}}
 
-For example:
+For [http://code.google.com/p/perm/wiki/paired_end_example example]:
  * {{{./PerM ref.fa -1 F3.fa -2 R3.fa -U 3000 -L 100 -v 5 -A -m -s -o out.sam}}}
  * {{{./PerM ref.txt -1 F3.fq -2 R3.fq -v 5 -m -s my.index -o out.mapping --seed F3}}}
  * {{{./PerM my.index -1 F3.fq -2 R3.fq -U 3000 -L 100 -v 5 -A -o out.sam}}}
